--- a/package.json
+++ b/package.json
@@ -7,5 +7,24 @@
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "request": "^2.88.2"
-  }
+  },
+  "name": "cheerio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ghgfhfg2/sy-cheerio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ghgfhfg2/sy-cheerio/issues"
+  },
+  "homepage": "https://github.com/ghgfhfg2/sy-cheerio#readme",
+  "description": ""
 }
