--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
+    "nodemon": "^3.0.1",
     "request": "^2.88.2"
   },
   "name": "cheerio",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
