--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.5.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "nodemon": "^3.0.1",
