--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
-    "nodemon": "^3.0.1",
     "request": "^2.88.2"
   },
   "name": "cheerio",
@@ -15,7 +14,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
     "url": "https://github.com/ghgfhfg2/sy-cheerio/issues"
   },
   "homepage": "https://github.com/ghgfhfg2/sy-cheerio#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
